force-app/main/default/objects/tdc_tsw__SMS_Unsubscribes__c/tdc_tsw__SMS_Unsubscribes__c.object-meta.xml
<CustomObject>
    <description>This is used to store the details of unsubscriber in Sender Number-based OPT OUT functionality.</description>
    <label>SMS Unsubscribes</label>
    <nameField>
        <label>SMS Unsubscribes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS Unsubscribes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>