force-app/main/default/objects/tdc_tsw__SMS_Unsubscribes__c/fields/tdc_tsw__Channel__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>SMS/MMS</fullName>
                <default>true</default>
                <label>SMS/MMS</label>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>WeChat</fullName>
            </value>
            <value>
                <fullName>MMS</fullName>
                <isActive>false</isActive>
                <label>MMS</label>
            </value>
            <value>
                <fullName>SMS</fullName>
                <isActive>false</isActive>
                <label>SMS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>