force-app/main/default/objects/tdc_tsw__SMS_Unsubscribes__c/fields/tdc_tsw__User_s_Selected_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__User_s_Selected_Field_Value__c</fullName>
    <label>User&apos;s Selected Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>