force-app/main/default/objects/tdc_tsw__SMS_Unsubscribes__c/listViews/tdc_tsw__All.listView-meta.xml
<ListView>
    <fullName>tdc_tsw__All</fullName>
    <columns>NAME</columns>
    <columns>tdc_tsw__Sender_Number__c</columns>
    <columns>tdc_tsw__Phone_Number__c</columns>
    <columns>tdc_tsw__Message__c</columns>
    <columns>tdc_tsw__SMS_Opt_Out_In__c</columns>
    <columns>tdc_tsw__Object__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>